feat: 完成前后端API对接、编译修复及代码整理
- 修复BaseController.success()参数顺序导致的Object->String类型转换错误
- 升级maven-compiler-plugin至3.10.1，兼容JDK 11
- 新增后端接口9个：用户信息/密码修改、岗位详情/选择框、资源启用、IoT数据查询
- 补充Service/Mapper/DTO/Entity/VO缺失方法及字段
- 完善Leave请假模块流程支持（flowStatus、taskId、流程枚举）
- 删除大文件zhyl-sql.zip（.gitignore已排除）
- 改进.gitignore排除敏感配置和大文件
- 前后端85+API接口全部对接完成