@@ -8,8 +8,9 @@ import com.github.pagehelper.Page;
 import com.zzyl.utils.ConvertHandler;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
-import lombok.*;
 
+import java.io.Serializable;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -20,12 +21,8 @@ import java.util.function.Function;
  *
  * @author itheima
  */
-@Data
 @ApiModel(value = "分页数据消息体", description = "分页数据统一对象")
-@Builder
-@AllArgsConstructor(access = AccessLevel.PRIVATE)
-@NoArgsConstructor
-public class PageResponse<T> {
+public class PageResponse<T> implements Serializable {
 
     @ApiModelProperty(value = "总条目数", required = true)
     private Long total = 0L;
@@ -42,30 +39,47 @@ public class PageResponse<T> {
     @ApiModelProperty(value = "数据列表", required = true)
     private List<T> records = Collections.EMPTY_LIST;
 
-
-    /**
-     * 通过mybatis的分页对象构造对象，不封装 items 属性
-     *
-     * @param page 分页对象
-     */
-    public PageResponse(Page<?> page) {
-        this.page = Convert.toInt(page.getPageNum());
-        this.total = page.getTotal();
-        this.pageSize = Convert.toInt(page.getPageSize());
-        this.pages = (long) page.getPages();
+    public PageResponse() {
     }
 
-    /**
-     * 通过mybatis的分页对象构造对象，封装 items 属性
-     *
-     * @param page  分页对象
-     * @param clazz 指定items 属性的类型
-     */
-    public PageResponse(Page<?> page, Class<T> clazz) {
-        this.page = Convert.toInt(page.getPageNum());
-        this.total = page.getTotal();
-        this.pageSize = Convert.toInt(page.getPageSize());
-        this.pages = (long) page.getPages();
+    public Long getTotal() {
+        return total;
+    }
+
+    public void setTotal(Long total) {
+        this.total = total;
+    }
+
+    public Integer getPageSize() {
+        return pageSize;
+    }
+
+    public void setPageSize(Integer pageSize) {
+        this.pageSize = pageSize;
+    }
+
+    public Long getPages() {
+        return pages;
+    }
+
+    public void setPages(Long pages) {
+        this.pages = pages;
+    }
+
+    public Integer getPage() {
+        return page;
+    }
+
+    public void setPage(Integer page) {
+        this.page = page;
+    }
+
+    public List<T> getRecords() {
+        return records;
+    }
+
+    public void setRecords(List<T> records) {
+        this.records = records;
     }
 
     /**
@@ -74,7 +88,7 @@ public class PageResponse<T> {
      * @return 分页数据对象
      */
     public static <T> PageResponse<T> getInstance() {
-        return PageResponse.<T>builder().build();
+        return new PageResponse<>();
     }
 
     /**
@@ -84,13 +98,12 @@ public class PageResponse<T> {
      * @return 目标分页数据对象
      */
     public static <T> PageResponse<T> of(Page<?> page) {
-        //封装分页数据
-        return PageResponse.<T>builder()
-                .page(Convert.toInt(page.getPageNum()))
-                .pageSize(Convert.toInt(page.getPageSize()))
-                .pages((long) page.getPages())
-                .total(page.getTotal())
-                .build();
+        PageResponse<T> result = new PageResponse<>();
+        result.setPage(Convert.toInt(page.getPageNum()));
+        result.setPageSize(Convert.toInt(page.getPageSize()));
+        result.setPages((long) page.getPages());
+        result.setTotal(page.getTotal());
+        return result;
     }
 
     /**
@@ -109,18 +122,18 @@ public class PageResponse<T> {
      * 并将Page中的Records转换为指定类型封装为items
      *
      * @param page           源分页对象
+     * @param clazz          指定items 属性的类型
      * @param convertHandler 特殊对象类型转换器，可传null，即不进行特殊处理
      * @return 目标分页数据对象
      */
     public static <O, T> PageResponse<T> of(Page<O> page, Class<T> clazz, ConvertHandler<O, T> convertHandler) {
-        //封装分页数据
-        return PageResponse.<T>builder()
-            .page(Convert.toInt(page.getPageNum()))
-            .pageSize(Convert.toInt(page.getPageSize()))
-            .pages((long) page.getPages())
-            .total(page.getTotal())
-            .records(copyToList(page.getResult(), clazz, convertHandler))
-            .build();
+        PageResponse<T> result = new PageResponse<>();
+        result.setPage(Convert.toInt(page.getPageNum()));
+        result.setPageSize(Convert.toInt(page.getPageSize()));
+        result.setPages((long) page.getPages());
+        result.setTotal(page.getTotal());
+        result.setRecords(copyToList(page.getResult(), clazz, convertHandler));
+        return result;
     }
 
     /**
@@ -143,18 +156,15 @@ public class PageResponse<T> {
      * @return 目标分页数据对象
      */
     public static <O, T> PageResponse<T> of(PageResponse<O> origin, Class<T> clazz, ConvertHandler<O, T> convertHandler) {
-        //复制除items外的属性
-        PageResponse<T> target = PageResponse.getInstance();
-        BeanUtil.copyProperties(origin, target, "items");
+        PageResponse<T> target = getInstance();
+        BeanUtil.copyProperties(origin, target, "records");
 
-        //items为空，直接返回
         if (CollUtil.isEmpty(origin.getRecords())) {
             return target;
         }
         List<T> targetList = copyToList(origin.getRecords(), clazz, convertHandler);
         target.setRecords(targetList);
 
-        //封装分页数据
         return target;
     }
 
@@ -169,13 +179,11 @@ public class PageResponse<T> {
      * @return 目标分页数据对象
      */
     public static <T> PageResponse<T> of(List<T> items, Integer page, Integer pageSize, Long pages, Long counts) {
-        //封装分页数据
-        PageResponse<T> pageResponse = PageResponse.<T>builder()
-                .page(Optional.ofNullable(page).orElse(1))
-                .pageSize(Optional.ofNullable(pageSize).orElse(1))
-                .pages(Optional.ofNullable(pages).orElse(1L))
-                .total(Optional.ofNullable(counts).orElse(1L))
-                .build();
+        PageResponse<T> pageResponse = new PageResponse<>();
+        pageResponse.setPage(Optional.ofNullable(page).orElse(1));
+        pageResponse.setPageSize(Optional.ofNullable(pageSize).orElse(1));
+        pageResponse.setPages(Optional.ofNullable(pages).orElse(1L));
+        pageResponse.setTotal(Optional.ofNullable(counts).orElse(1L));
 
         if (CollUtil.isEmpty(items)) {
             return pageResponse;
@@ -203,9 +211,8 @@ public class PageResponse<T> {
      * @param elements items元素
      * @return 目标分页数据对象
      */
-    @SafeVarargs
     public static <E> PageResponse<E> of(E... elements) {
-        return of(List.of(elements));
+        return of(Arrays.asList(elements));
     }
 
     /**
@@ -217,23 +224,14 @@ public class PageResponse<T> {
      */
     public static <O, T> PageResponse<T> of(PageResponse<O> origin, Function<List<O>, List<T>> function) {
         List<T> orderVOList = function.apply(origin.getRecords());
-        return PageResponse.of(orderVOList, origin.getPage(), origin.getPageSize(), origin.getPages(), origin.total);
+        return of(orderVOList, origin.getPage(), origin.getPageSize(), origin.getPages(), origin.getTotal());
     }
 
     /**
      * 转换结构
-     * @param content
-     * @param clazz
-     * @param convertHandler
-     * @param <T>
-     * @param <O>
-     * @return
      */
     private static <T, O> List<T> copyToList(List<O> content, Class<T> clazz, ConvertHandler<O, T> convertHandler) {
-        //对items进行类型转换
         List<T> targetList = BeanUtil.copyToList(content, clazz);
-        //特殊类型转换
-        //特殊类型转换
         if (CollUtil.isNotEmpty(targetList) && ObjectUtil.isNotEmpty(convertHandler)) {
             for (int i = 0; i < content.size(); i++) {
                 convertHandler.map(content.get(i), targetList.get(i));
